BPHC-50: fixed sidebar logo alignment

--- a/static/css/sidebar.css
+++ b/static/css/sidebar.css
@@ -98,6 +98,7 @@
 .sidebar-brand {
   font-size: 18px;
   line-height: 60px;
+  text-indent: 0px !important;
 }
 
 .sidebar-brand a {
